src/styles/App.css
body {
  margin: auto;
  width: fit-content;
  /* max-width: 50vw; */
}

div#root > div:first-child {
  font-size: 7rem;
  font-family: "Jacques Francois Shadow", serif;
  font-weight: 400;
  font-style: normal; 
  text-align: center;
}

div#root > div:nth-child(2) {
  font-family: "IBM Plex Sans", sans-serif;
  font-size: 0.9rem;
  font-weight: 700;
  font-style: normal; 
  color: rgb(87, 87, 87);
}

div#root form.hidden {
  display: none;
}

div#root div.form-wrapper {
  margin: auto;
  border: solid 0.15rem rgb(224, 224, 224);
  border-radius: 3px;
}

div.form-wrapper > button {
  display: flex;
  margin: auto;
}

button {
  display: flex;
  align-items: center;
}

button > img {
  height: 1.5rem;
}

@media (max-width: 700px) {
  div#root > div:first-child {
    font-size: 3.5rem;
  }

  div#root > div:nth-child(2) {
    font-size: 0.6rem;
  }
}





dialog {
  margin-top: 0;
  border-radius: 15px;
}

dialog > div {
  width: 93vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

dialog div.section-header {
  font-size: 2rem;
  text-align: center;
}

dialog div.grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

dialog > div span {
  text-align: center;
}

dialog > div *.span-2 {
  grid-column: span 2;
}

dialog span {
  white-space: pre-wrap;
}

dialog span.justify-left {
  text-align: left;
}

